// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Flag Available flags 1`] = `
.c3 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c4 {
  height: 20px;
  border: 1px solid #EBEBE8;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      ca
    </div>
    <div>
      <svg
        className="c3"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          fillOpacity="1"
          transform="translate(74.118) scale(.9375)"
        >
          <path
            d="M81.137 0h362.276v512H81.137z"
            fill="#fff"
          />
          <path
            d="M-100 0H81.138v512H-100zm543.413 0H624.55v512H443.414zM135.31 247.41l-14.067 4.808 65.456 57.446c4.95 14.764-1.72 19.116-5.97 26.86l71.06-9.02-1.85 71.512 14.718-.423-3.21-70.918 71.13 8.432c-4.402-9.297-8.32-14.233-4.247-29.098l65.414-54.426-11.447-4.144c-9.36-7.222 4.044-34.784 6.066-52.178 0 0-38.195 13.135-40.698 6.262l-9.727-18.685-34.747 38.17c-3.796.91-5.413-.6-6.304-3.808l16.053-79.766-25.42 14.297c-2.128.91-4.256.125-5.658-2.355l-24.45-49.06-25.21 50.95c-1.9 1.826-3.803 2.037-5.382.796l-24.204-13.578 14.53 79.143c-1.156 3.14-3.924 4.025-7.18 2.324l-33.216-37.737c-4.345 6.962-7.29 18.336-13.033 20.885-5.744 2.387-24.98-4.823-37.873-7.637 4.404 15.895 18.176 42.302 9.46 50.957z"
            fill="#bf0a30"
          />
        </g>
        <title>
          Canada
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      de
    </div>
    <div>
      <svg
        className="c3"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          fillRule="evenodd"
          strokeWidth="1pt"
        >
          <path
            d="M0 320h640v160.002H0z"
            fill="#ffce00"
          />
          <path
            d="M0 0h640v160H0z"
          />
          <path
            d="M0 160h640v160H0z"
            fill="#d00"
          />
        </g>
        <title>
          Germany
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      eu
    </div>
    <div>
      <svg
        className="c3"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <defs>
          <g
            id="eu_d"
          >
            <g
              id="eu_b"
            >
              <path
                d="M0-1l-.31.95.477.156z"
                id="eu_a"
              />
              <use
                transform="scale(-1 1)"
                xlinkHref="#eu_a"
              />
            </g>
            <g
              id="eu_c"
            >
              <use
                transform="rotate(72)"
                xlinkHref="#eu_b"
              />
              <use
                transform="rotate(144)"
                xlinkHref="#eu_b"
              />
            </g>
            <use
              transform="scale(-1 1)"
              xlinkHref="#eu_c"
            />
          </g>
        </defs>
        <path
          d="M0 0h640v480H0z"
          fill="#039"
        />
        <g
          fill="#fc0"
          transform="translate(320 242.263) scale(23.7037)"
        >
          <use
            height="100%"
            width="100%"
            xlinkHref="#eu_d"
            y="-6"
          />
          <use
            height="100%"
            width="100%"
            xlinkHref="#eu_d"
            y="6"
          />
          <g
            id="eu_e"
          >
            <use
              height="100%"
              width="100%"
              x="-6"
              xlinkHref="#eu_d"
            />
            <use
              height="100%"
              transform="rotate(-144 -2.344 -2.11)"
              width="100%"
              xlinkHref="#eu_d"
            />
            <use
              height="100%"
              transform="rotate(144 -2.11 -2.344)"
              width="100%"
              xlinkHref="#eu_d"
            />
            <use
              height="100%"
              transform="rotate(72 -4.663 -2.076)"
              width="100%"
              xlinkHref="#eu_d"
            />
            <use
              height="100%"
              transform="rotate(72 -5.076 .534)"
              width="100%"
              xlinkHref="#eu_d"
            />
          </g>
          <use
            height="100%"
            transform="scale(-1 1)"
            width="100%"
            xlinkHref="#eu_e"
          />
        </g>
        <title>
          EU
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      fr
    </div>
    <div>
      <svg
        className="c3"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          fillRule="evenodd"
          strokeWidth="1pt"
        >
          <path
            d="M0 0h640v480H0z"
            fill="#fff"
          />
          <path
            d="M0 0h213.337v480H0z"
            fill="#00267f"
          />
          <path
            d="M426.662 0H640v480H426.662z"
            fill="#f31830"
          />
        </g>
        <title>
          France
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      ru
    </div>
    <div>
      <svg
        className="c4"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          fillRule="evenodd"
          strokeWidth="1pt"
        >
          <path
            d="M0 0h640v480H0z"
            fill="#fff"
          />
          <path
            d="M0 160.003h640V480H0z"
            fill="#0039a6"
          />
          <path
            d="M0 319.997h640V480H0z"
            fill="#d52b1e"
          />
        </g>
        <title>
          Russia
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      gb
    </div>
    <div>
      <svg
        className="c3"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <defs>
          <clipPath
            id="gb_a"
          >
            <path
              d="M-85.333 0h682.67v512h-682.67z"
              fillOpacity=".67"
            />
          </clipPath>
        </defs>
        <g
          clipPath="url(#gb_a)"
          transform="translate(80) scale(.94)"
        >
          <g
            strokeWidth="1pt"
          >
            <path
              d="M-256 0H768.02v512.01H-256z"
              fill="#006"
            />
            <path
              d="M-256 0v57.244l909.535 454.768H768.02V454.77L-141.515 0H-256zM768.02 0v57.243L-141.515 512.01H-256v-57.243L653.535 0H768.02z"
              fill="#fff"
            />
            <path
              d="M170.675 0v512.01h170.67V0h-170.67zM-256 170.67v170.67H768.02V170.67H-256z"
              fill="#fff"
            />
            <path
              d="M-256 204.804v102.402H768.02V204.804H-256zM204.81 0v512.01h102.4V0h-102.4zM-256 512.01L85.34 341.34h76.324l-341.34 170.67H-256zM-256 0L85.34 170.67H9.016L-256 38.164V0zm606.356 170.67L691.696 0h76.324L426.68 170.67h-76.324zM768.02 512.01L426.68 341.34h76.324L768.02 473.848v38.162z"
              fill="#c00"
            />
          </g>
        </g>
        <title>
          Great Britain
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      dk
    </div>
    <div>
      <svg
        className="c3"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <path
          d="M0 0h640.1v480H0z"
          fill="#c60c30"
        />
        <path
          d="M205.714 0h68.57v480h-68.57z"
          fill="#fff"
        />
        <path
          d="M0 205.714h640.1v68.57H0z"
          fill="#fff"
        />
        <title>
          Denmark
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      fi
    </div>
    <div>
      <svg
        className="c4"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <path
          d="M0 0h640v480H0z"
          fill="#fff"
        />
        <path
          d="M0 174.545h640v130.909H0z"
          fill="#003580"
        />
        <path
          d="M175.455 0h130.909v480H175.455z"
          fill="#003580"
        />
        <title>
          Finland
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      no
    </div>
    <div>
      <svg
        className="c3"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <path
          d="M0 0h640v480H0z"
          fill="#ef2b2d"
        />
        <path
          d="M180 0h120v480H180z"
          fill="#fff"
        />
        <path
          d="M0 180h640v120H0z"
          fill="#fff"
        />
        <path
          d="M210 0h60v480h-60z"
          fill="#002868"
        />
        <path
          d="M0 210h640v60H0z"
          fill="#002868"
        />
        <title>
          Japan
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      se
    </div>
    <div>
      <svg
        className="c3"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          transform="translate(50.082) scale(.9375)"
        >
          <g
            fillRule="evenodd"
            strokeWidth="1pt"
          >
            <path
              d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
              fill="#006aa7"
            />
            <path
              d="M-121.103 204.984h256v102.4h-256z"
              fill="#fecc00"
            />
            <path
              d="M133.843.01h102.4v511.997h-102.4z"
              fill="#fecc00"
            />
            <path
              d="M232.995 205.013h460.798v102.4H232.995z"
              fill="#fecc00"
            />
            <path
              d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
              fill="#006aa7"
            />
          </g>
        </g>
        <title>
          Sweden
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      us
    </div>
    <div>
      <svg
        className="c3"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          fillRule="evenodd"
          transform="scale(.9375)"
        >
          <g
            strokeWidth="1pt"
          >
            <g
              fill="#bd3d44"
            >
              <path
                d="M0 0h972.81v39.385H0zM0 78.77h972.81v39.385H0zM0 157.54h972.81v39.385H0zM0 236.31h972.81v39.385H0zM0 315.08h972.81v39.385H0zM0 393.85h972.81v39.385H0zM0 472.62h972.81v39.385H0z"
              />
            </g>
            <g
              fill="#fff"
            >
              <path
                d="M0 39.385h972.81V78.77H0zM0 118.155h972.81v39.385H0zM0 196.925h972.81v39.385H0zM0 275.695h972.81v39.385H0zM0 354.465h972.81v39.385H0zM0 433.235h972.81v39.385H0z"
              />
            </g>
          </g>
          <path
            d="M0 0h389.12v275.69H0z"
            fill="#192f5d"
          />
          <g
            fill="#fff"
          >
            <path
              d="M32.427 11.8l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM97.28 11.8l3.541 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735H93.74zM162.136 11.8l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.269 6.734 3.54-10.896-9.269-6.735h11.458zM226.988 11.8l3.54 10.896h11.457l-9.269 6.735 3.54 10.896-9.268-6.734-9.27 6.734 3.541-10.896-9.27-6.735h11.458zM291.843 11.8l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM356.698 11.8l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.27 6.734 3.542-10.896-9.27-6.735h11.458z"
            />
            <g>
              <path
                d="M64.855 39.37l3.54 10.896h11.458L70.583 57l3.542 10.897-9.27-6.734-9.269 6.734L59.126 57l-9.269-6.734h11.458zM129.707 39.37l3.54 10.896h11.457L135.435 57l3.54 10.897-9.268-6.734-9.27 6.734L123.978 57l-9.27-6.734h11.458zM194.562 39.37l3.54 10.896h11.458L200.29 57l3.541 10.897-9.27-6.734-9.268 6.734L188.833 57l-9.269-6.734h11.457zM259.417 39.37l3.54 10.896h11.458L265.145 57l3.541 10.897-9.269-6.734-9.27 6.734L253.69 57l-9.27-6.734h11.458zM324.269 39.37l3.54 10.896h11.457L329.997 57l3.54 10.897-9.268-6.734-9.27 6.734L318.54 57l-9.27-6.734h11.458z"
              />
            </g>
            <g>
              <path
                d="M32.427 66.939l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM97.28 66.939l3.541 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735H93.74zM162.136 66.939l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.269 6.734 3.54-10.896-9.269-6.735h11.458zM226.988 66.939l3.54 10.896h11.457l-9.269 6.735 3.54 10.896-9.268-6.734-9.27 6.734 3.541-10.896-9.27-6.735h11.458zM291.843 66.939l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM356.698 66.939l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.27 6.734 3.542-10.896-9.27-6.735h11.458z"
              />
              <g>
                <path
                  d="M64.855 94.508l3.54 10.897h11.458l-9.27 6.734 3.542 10.897-9.27-6.734-9.269 6.734 3.54-10.897-9.269-6.734h11.458zM129.707 94.508l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458zM194.562 94.508l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.27-6.734-9.268 6.734 3.54-10.897-9.269-6.734h11.457zM259.417 94.508l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.269-6.734-9.27 6.734 3.542-10.897-9.27-6.734h11.458zM324.269 94.508l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458z"
                />
              </g>
            </g>
            <g>
              <path
                d="M32.427 122.078l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM97.28 122.078l3.541 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735H93.74zM162.136 122.078l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.269 6.734 3.54-10.896-9.269-6.735h11.458zM226.988 122.078l3.54 10.896h11.457l-9.269 6.735 3.54 10.896-9.268-6.734-9.27 6.734 3.541-10.896-9.27-6.735h11.458zM291.843 122.078l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM356.698 122.078l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.27 6.734 3.542-10.896-9.27-6.735h11.458z"
              />
              <g>
                <path
                  d="M64.855 149.647l3.54 10.897h11.458l-9.27 6.734 3.542 10.897-9.27-6.734-9.269 6.734 3.54-10.897-9.269-6.734h11.458zM129.707 149.647l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458zM194.562 149.647l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.27-6.734-9.268 6.734 3.54-10.897-9.269-6.734h11.457zM259.417 149.647l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.269-6.734-9.27 6.734 3.542-10.897-9.27-6.734h11.458zM324.269 149.647l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458z"
                />
              </g>
            </g>
            <g>
              <path
                d="M32.427 177.217l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM97.28 177.217l3.541 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735H93.74zM162.136 177.217l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.269 6.734 3.54-10.896-9.269-6.735h11.458zM226.988 177.217l3.54 10.896h11.457l-9.269 6.735 3.54 10.896-9.268-6.734-9.27 6.734 3.541-10.896-9.27-6.735h11.458zM291.843 177.217l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM356.698 177.217l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.27 6.734 3.542-10.896-9.27-6.735h11.458z"
              />
              <g>
                <path
                  d="M64.855 204.786l3.54 10.897h11.458l-9.27 6.734 3.542 10.897-9.27-6.734-9.269 6.734 3.54-10.897-9.269-6.734h11.458zM129.707 204.786l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458zM194.562 204.786l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.27-6.734-9.268 6.734 3.54-10.897-9.269-6.734h11.457zM259.417 204.786l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.269-6.734-9.27 6.734 3.542-10.897-9.27-6.734h11.458zM324.269 204.786l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458z"
                />
              </g>
            </g>
            <g>
              <path
                d="M32.427 232.356l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM97.28 232.356l3.541 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735H93.74zM162.136 232.356l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.269 6.734 3.54-10.896-9.269-6.735h11.458zM226.988 232.356l3.54 10.896h11.457l-9.269 6.735 3.54 10.896-9.268-6.734-9.27 6.734 3.541-10.896-9.27-6.735h11.458zM291.843 232.356l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM356.698 232.356l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.27 6.734 3.542-10.896-9.27-6.735h11.458z"
              />
            </g>
          </g>
        </g>
        <title>
          United States of America
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      jp
    </div>
    <div>
      <svg
        className="c4"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <defs>
          <clipPath
            id="jp_a"
          >
            <path
              d="M-88.001 32h640v480h-640z"
              fillOpacity=".67"
            />
          </clipPath>
        </defs>
        <g
          clipPath="url(#jp_a)"
          fillRule="evenodd"
          strokeWidth="1pt"
          transform="translate(88.001 -32)"
        >
          <path
            d="M-128 32h720v480h-720z"
            fill="#fff"
          />
          <ellipse
            cx="523.08"
            cy="344.05"
            fill="#d30000"
            rx="194.93"
            ry="194.93"
            transform="translate(-168.44 8.618) scale(.76554)"
          />
        </g>
        <title>
          Japan
        </title>
      </svg>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      cn
    </div>
    <div>
      <svg
        className="c3"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <defs>
          <path
            d="M-.588.81L0-1 .588.81-.952-.31H.952z"
            fill="#ffde00"
            id="cn_a"
          />
        </defs>
        <path
          d="M0 0h640v480H0z"
          fill="#de2910"
        />
        <use
          height="20"
          transform="matrix(71.9991 0 0 72 119.999 120)"
          width="30"
          xlinkHref="#cn_a"
        />
        <use
          height="20"
          transform="matrix(-12.33562 -20.5871 20.58684 -12.33577 240.291 47.996)"
          width="30"
          xlinkHref="#cn_a"
        />
        <use
          height="20"
          transform="matrix(-3.38573 -23.75998 23.75968 -3.38578 287.95 95.796)"
          width="30"
          xlinkHref="#cn_a"
        />
        <use
          height="20"
          transform="matrix(6.5991 -23.0749 23.0746 6.59919 287.959 168.012)"
          width="30"
          xlinkHref="#cn_a"
        />
        <use
          height="20"
          transform="matrix(14.9991 -18.73557 18.73533 14.99929 239.933 216.054)"
          width="30"
          xlinkHref="#cn_a"
        />
        <title>
          China
        </title>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flag Default use 1`] = `
.c0 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

<svg
  className="c0"
  focusable="false"
  role="img"
  viewBox="0 0 640 480"
>
  <g
    transform="translate(50.082) scale(.9375)"
  >
    <g
      fillRule="evenodd"
      strokeWidth="1pt"
    >
      <path
        d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
        fill="#006aa7"
      />
      <path
        d="M-121.103 204.984h256v102.4h-256z"
        fill="#fecc00"
      />
      <path
        d="M133.843.01h102.4v511.997h-102.4z"
        fill="#fecc00"
      />
      <path
        d="M232.995 205.013h460.798v102.4H232.995z"
        fill="#fecc00"
      />
      <path
        d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
        fill="#006aa7"
      />
    </g>
  </g>
  <title>
    Sweden
  </title>
</svg>
`;

exports[`Storyshots Atoms | Flag Different size  1`] = `
.c0 {
  height: 40px;
  box-sizing: border-box;
  display: block;
  width: 53.333333333333336px;
  overflow: hidden;
}

<svg
  className="c0"
  focusable="false"
  role="img"
  viewBox="0 0 640 480"
>
  <g
    transform="translate(50.082) scale(.9375)"
  >
    <g
      fillRule="evenodd"
      strokeWidth="1pt"
    >
      <path
        d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
        fill="#006aa7"
      />
      <path
        d="M-121.103 204.984h256v102.4h-256z"
        fill="#fecc00"
      />
      <path
        d="M133.843.01h102.4v511.997h-102.4z"
        fill="#fecc00"
      />
      <path
        d="M232.995 205.013h460.798v102.4H232.995z"
        fill="#fecc00"
      />
      <path
        d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
        fill="#006aa7"
      />
    </g>
  </g>
  <title>
    Sweden
  </title>
</svg>
`;

exports[`Storyshots Atoms | Flag Inline 1`] = `
.c0 {
  height: 20px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  bottom: 1px;
  width: 26.666666666666668px;
  overflow: hidden;
}

<span>
  You can put the 
  <svg
    className="c0"
    focusable="false"
    role="img"
    viewBox="0 0 640 480"
  >
    <g
      transform="translate(50.082) scale(.9375)"
    >
      <g
        fillRule="evenodd"
        strokeWidth="1pt"
      >
        <path
          d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
          fill="#006aa7"
        />
        <path
          d="M-121.103 204.984h256v102.4h-256z"
          fill="#fecc00"
        />
        <path
          d="M133.843.01h102.4v511.997h-102.4z"
          fill="#fecc00"
        />
        <path
          d="M232.995 205.013h460.798v102.4H232.995z"
          fill="#fecc00"
        />
        <path
          d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
          fill="#006aa7"
        />
      </g>
    </g>
    <title>
      Sweden
    </title>
  </svg>
   directly in the text with inline prop!
</span>
`;

exports[`Storyshots Atoms | Flag Renders nothing if wrong country code 1`] = `null`;
